--- a/_posts/0000-01-02-mnoetel.md
+++ b/_posts/0000-01-02-mnoetel.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+##Time is an illusion. Timing is an art
 Use the left arrow to go back!
